[package]
name = "moga"
description = "A multi-objective genetic algorithm framework"
keywords = ["genetic", "evolutionary", "algorithm", "framework", "closures"]
categories = ["algorithms", "concurrency", "science"]
repository = "https://github.com/ArmoredPony/moga"
documentation = "https://docs.rs/moga"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
rayon = "1.10.0"
typed-builder = "0.20.0"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

[[example]]
name = "nsga2_binh_korn"
path = "examples/nsga2/binh_korn.rs"

[[example]]
name = "nsga2_schaffer_n1"
path = "examples/nsga2/schaffer_n1.rs"
